--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <section class="conteudo-principal">
         <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
         <div class="botoes">
-            <button class="botao">Cursos na Alura</button>
-            <button class="botao">Criar projetos em Javascript</button>
-            <button class="botao">Criar um portfólio</button>
-            <button class="botao">Atualizar meu currículo</button>
+            <button class="botao">Ir para a Inglaterra na minha irmã</button>
+            <button class="botao">Passar na ESPECEx</button>
+            <button class="botao">Assistir uma Champions na Inglaterra</button>
+            <button class="botao">Comprar um Seiko</button>
         </div>
     </section>
 </body>
