--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
     <section class="conteudo-principal">
         <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
         <div class="botoes">
-            <button class="botao">Ir para a Inglaterra na minha irmã</button>
+            <button class="botao ativo">Ir para a Inglaterra na minha irmã</button>
             <button class="botao">Passar na ESPECEx</button>
             <button class="botao">Assistir uma Champions na Inglaterra</button>
             <button class="botao">Comprar um Seiko</button>
         </div>
     </section>
+    <script src="main.js"></script>
 </body>
 
 </html>
