--- a/index.html
+++ b/index.html
@@ -17,6 +17,23 @@
             <button class="botao">Assistir uma Champions na Inglaterra</button>
             <button class="botao">Comprar um Seiko</button>
         </div>
+
+<div class="abas-textos">
+<div class="aba-conteudo">
+    <h3></h3>
+
+
+
+</div>
+
+
+
+</div>
+
+
+
+
+
     </section>
     <script src="main.js"></script>
 </body>
