--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <div class="abas-textos">
 <div class="aba-conteudo">
-    <h3>Ir para a Inglaterra na minha irmã</h3>
+    <h3 class="aba-conteudo-titulo-principal">Ir para a Inglaterra na minha irmã</h3>
 
 
 
