--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 <div class="aba-conteudo">
     <h3 class="aba-conteudo-titulo-principal">Ir para a Inglaterra na minha irmã</h3>
 
+    <h4 class="aba-conteudo-titulo-secundario">Tempo para complentar o objetivo</h4>
+
 
 
 </div>
