--- a/index.html
+++ b/index.html
@@ -24,7 +24,29 @@
 
     <h4 class="aba-conteudo-titulo-secundario">Tempo para complentar o objetivo</h4>
 
+</div>
 
+<div class="abas-textos">
+<div class="aba-conteudo">
+    <h3 class="aba-conteudo-titulo-principal">Passar na ESPECEx</h3>
+
+    <h4 class="aba-conteudo-titulo-secundario">Tempo para complentar o objetivo</h4>
+
+</div>
+
+<div class="abas-textos">
+<div class="aba-conteudo">
+    <h3 class="aba-conteudo-titulo-principal">Assistir uma Champions na Inglaterra</h3>
+
+    <h4 class="aba-conteudo-titulo-secundario">Tempo para complentar o objetivo</h4>
+
+</div>
+
+<div class="abas-textos">
+<div class="aba-conteudo">
+    <h3 class="aba-conteudo-titulo-principal">Comprar um Seiko</h3>
+
+    <h4 class="aba-conteudo-titulo-secundario">Tempo para complentar o objetivo</h4>
 
 </div>
 
