--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
 
 <div class="abas-textos">
-<div class="aba-conteudo">
+<div class="aba-conteudo ativo">
     <h3 class="aba-conteudo-titulo-principal">Ir para a Inglaterra na minha irmã</h3>
 
     <h4 class="aba-conteudo-titulo-secundario">Tempo para complentar o objetivo</h4>
