--- a/index.html
+++ b/index.html
@@ -12,54 +12,44 @@
     <section class="conteudo-principal">
         <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
         <div class="botoes">
-            <button class="botao ativo">Ir para a Inglaterra na minha irmã</button>
-            <button class="botao">Passar na ESPECEx</button>
-            <button class="botao">Assistir uma Champions na Inglaterra</button>
-            <button class="botao">Comprar um Seiko</button>
+            <button class="botao ativo">Passar na faculdade de Engenharia de Software</button>
+            <button class="botao">Comprar um carro</button>
+            <button class="botao">Ir morar em Dois Vizinhos</button>
+            <button class="botao">Viajar para a Europa</button>
         </div>
 
-<div class="abas-textos">
-<div class="aba-conteudo ativo">
-    <h3 class="aba-conteudo-titulo-principal">Ir para a Inglaterra na minha irmã</h3>
+        <div class="abas-textos">
+            <div class="aba-conteudo ativo">
+                <h3 class="aba-conteudo-titulo-principal">Passar na faculdade de Engenharia de Software</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                <div class="contador"></div>
+            </div>
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Comprar um carro</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                <div class="contador"></div>
+            </div>
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Ir morar em Dois Vizinhos</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                <div class="contador"></div>
 
-    <h4 class="aba-conteudo-titulo-secundario">Tempo para complentar o objetivo</h4>
+            </div>
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Viajar para a Europa</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                <div class="contador"></div>
 
-</div>
+            </div>
 
-<div class="abas-textos">
-<div class="aba-conteudo">
-    <h3 class="aba-conteudo-titulo-principal">Passar na ESPECEx</h3>
-
-    <h4 class="aba-conteudo-titulo-secundario">Tempo para complentar o objetivo</h4>
-
-</div>
-
-<div class="abas-textos">
-<div class="aba-conteudo">
-    <h3 class="aba-conteudo-titulo-principal">Assistir uma Champions na Inglaterra</h3>
-
-    <h4 class="aba-conteudo-titulo-secundario">Tempo para complentar o objetivo</h4>
-
-</div>
-
-<div class="abas-textos">
-<div class="aba-conteudo">
-    <h3 class="aba-conteudo-titulo-principal">Comprar um Seiko</h3>
-
-    <h4 class="aba-conteudo-titulo-secundario">Tempo para complentar o objetivo</h4>
-
-</div>
-
-
-
-</div>
-
+        </div>
 
 
 
 
     </section>
     <script src="main.js"></script>
+
 </body>
 
 </html>
