--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <section class="conteudo-principal">
         <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
         <div class="botoes">
-            <button class="botao ativo">Passar na faculdade de Engenharia de Software</button>
-            <button class="botao">Comprar um carro</button>
-            <button class="botao">Ir morar em Dois Vizinhos</button>
-            <button class="botao">Viajar para a Europa</button>
+            <button class="botao ativo">Assitir uma final na Inglaterra</button>
+            <button class="botao">Ir para a Inglaterra na minha irmã</button>
+            <button class="botao">Passar em engenharia de software</button>
+            <button class="botao">Comprar um seiko</button>
         </div>
 
         <div class="abas-textos">
