--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <div class="abas-textos">
             <div class="aba-conteudo ativo">
-                <h3 class="aba-conteudo-titulo-principal">Passar na faculdade de Engenharia de Software</h3>
+                <h3 class="aba-conteudo-titulo-principal">Ir para a Inglaterra na minha irmã</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                 <div class="contador"></div>
             </div>
