--- a/index.html
+++ b/index.html
@@ -20,23 +20,23 @@
 
         <div class="abas-textos">
             <div class="aba-conteudo ativo">
+                <h3 class="aba-conteudo-titulo-principal">Assitir uma final na Inglaterra</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                <div class="contador"></div>
+            </div>
+            <div class="aba-conteudo">
                 <h3 class="aba-conteudo-titulo-principal">Ir para a Inglaterra na minha irmã</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                 <div class="contador"></div>
             </div>
             <div class="aba-conteudo">
-                <h3 class="aba-conteudo-titulo-principal">Comprar um carro</h3>
-                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
-                <div class="contador"></div>
-            </div>
-            <div class="aba-conteudo">
-                <h3 class="aba-conteudo-titulo-principal">Ir morar em Dois Vizinhos</h3>
+                <h3 class="aba-conteudo-titulo-principal">Passar em engenharia de software</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                 <div class="contador"></div>
 
             </div>
             <div class="aba-conteudo">
-                <h3 class="aba-conteudo-titulo-principal">Viajar para a Europa</h3>
+                <h3 class="aba-conteudo-titulo-principal">Comprar um seiko</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                 <div class="contador"></div>
 
