--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <body>
     <section class="conteudo-principal">
         <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
+
+        <div class="conteudo">
         <div class="botoes">
+
             <button class="botao ativo">Assitir uma final na Inglaterra</button>
             <button class="botao">Ir para a Inglaterra na minha irmã</button>
             <button class="botao">Passar em engenharia de software</button>
@@ -46,7 +49,7 @@
 
 
 
-
+    </div>
     </section>
     <script src="main.js"></script>
 
