--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <h2 class="titulo-principal">Meus objetivos do ano<span>_</span></h2>
         <div class="conteudo">
             <div class="botoes">
-                <button class="botao ativo">Me tornar Campeão de kart</button>
-                <button class="botao">Cursar Engenharia Mecânica</button>
-                <button class="botao">Viajar para o Chile</button>
-                <button class="botao">Comprar um carro</button>
+                <button class="botao ativo">Assistir uma Premier League</button>
+                <button class="botao">Passar em Engenharia de Software</button>
+                <button class="botao">Ir para a Inglaterra na minha irmã</button>
+                <button class="botao">Comprar um seiko</button>
             </div>
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
-                    <h3 class="aba-conteudo-titulo-principal">Me tornar Campeão de kart</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Assistir uma Premier League</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
@@ -42,7 +42,7 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Cursar Engenharia Mecânica</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Passar em Engenharia de Software</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
@@ -64,7 +64,7 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Viajar para o Chile</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Ir para a Inglaterra na minha irmã</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
@@ -86,7 +86,7 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Comprar um carro</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Comprar um seiko</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
