--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="conteudo">
             <div class="botoes">
                 <button class="botao ativo">Passar na faculdade de Engenharia de Software</button>
-                <button class="botao">Viajar para a Inglaterra na minha irmã</button>
+                <button class="botao">Viajar para a Inglaterra para casa da minha irmã</button>
                 <button class="botao">Passar na ESPECEx</button>
                 <button class="botao">Assitir um jogo da Premier League</button>
             </div>
@@ -28,7 +28,7 @@
                 </div>
 
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Viajar para a Inglaterra na minha irmã</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Viajar para a Inglaterra para casa da minha irmã</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador"> </div>
                 </div>
