--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
                 <div class="aba-conteudo">
                     <h3 class="aba-conteudo-titulo-principal">Viajar para a Inglaterra para casa da minha irmã</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
-                    <div class="contador"> <div class="contador-digito">
+                    <div class="contador">
+                        <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias0">7</p>
                             <p class="contador-digito-texto">dias</p>
                         </div>
@@ -77,13 +78,14 @@
                             <p class="contador-digito-numero" id="seg0">7</p>
                             <p class="contador-digito-texto">seg</p>
                         </div>
-                         </div>
+                    </div>
                 </div>
 
                 <div class="aba-conteudo">
                     <h3 class="aba-conteudo-titulo-principal">Passar na ESPECEx</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
-                    <div class="contador">  <div class="contador-digito">
+                    <div class="contador">
+                        <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias0">7</p>
                             <p class="contador-digito-texto">dias</p>
                         </div>
@@ -112,7 +114,8 @@
                 <div class="aba-conteudo">
                     <h3 class="aba-conteudo-titulo-principal">Assitir um jogo da Premier League</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
-                    <div class="contador">  <div class="contador-digito">
+                    <div class="contador">
+                        <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias0">7</p>
                             <p class="contador-digito-texto">dias</p>
                         </div>
